Add Java 8 compatible File read